[workspace]
resolver = "2"

members = [
  "blazebooru",
  "common",
  "core",
  "export",
  "import",
  "models",
  "store",
]

default-members = [
  "blazebooru",
  "common",
  "core",
]

[workspace.dependencies]
anyhow = "1.0.86"
argon2 = "0.5.3"
axum = "0.7.5"
axum-client-ip = "0.6.0"
axum-extra = "0.9.3"
blake3 = "1.5.1"
bytes = "1.6.0"
chrono = "0.4.38"
clap = "4.5.4"
dirs = "5.0.1"
dotenv = "0.15.0"
futures = "0.3.30"
futures-core = "0.3.30"
futures-util = "0.3.30"
image = "0.25.1"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
regex = "1.10.4"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
sqlx = "0.7.4"
thiserror = "1.0.61"
tokio = "1.37.0"
tokio-util = "0.7.11"
toml = "0.8.13"
tower-http = "0.5.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.8.0"
