[package]
name = "blazebooru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blazebooru_common = { path = "../common" }
blazebooru_core = { path = "../core" }
blazebooru_export = { path = "../export" }
blazebooru_import = { path = "../import" }
blazebooru_models = { path = "../models" }
anyhow = "1.0.69"
axum = { version = "0.6.9" , features = ["headers", "macros", "multipart"] }
axum-extra = { version = "0.6.0", features = ["spa"] }
chrono = "0.4.23"
clap = { version = "4.1.8", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.26"
jsonwebtoken = "8.2.0"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["macros", "signal"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.3.0", features = ["serde"] }
