[package]
name = "blazebooru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blazebooru_common = { path = "../common" }
blazebooru_core = { path = "../core" }
blazebooru_export = { path = "../export" }
blazebooru_import = { path = "../import" }
blazebooru_models = { path = "../models" }
anyhow = "1.0.75"
axum = { version = "0.6.20" , features = ["headers", "macros", "multipart"] }
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.29"
jsonwebtoken = "9.1.0"
serde = "1.0.190"
serde_derive = "1.0.190"
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.5.0", features = ["serde"] }
