[package]
name = "blazebooru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blazebooru_common = { path = "../common" }
blazebooru_core = { path = "../core" }
blazebooru_export = { path = "../export" }
blazebooru_import = { path = "../import" }
blazebooru_models = { path = "../models" }
anyhow = { workspace = true }
axum = { workspace = true, features = ["headers", "macros", "multipart"] }
axum-client-ip = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dotenv = { workspace = true }
futures = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { workspace = true, features = ["fs", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["serde"] }
