[package]
name = "blazebooru_common"
version = "0.1.0"
authors = ["Forb.Jok <forbjok@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blazebooru_models = { path = "../models" }
anyhow = "1.0.69"
blake3 = "1.3.3"
bytes = "1.4.0"
chrono = { version = "0.4.23", features = ["serde"] }
futures-core = "0.3.26"
futures-util = "0.3.26"
tokio = "1.25.0"
tokio-util = "0.7.7"
tracing = "0.1.37"
