[package]
name = "blazebooru_common"
version = "0.1.0"
authors = ["Forb.Jok <forbjok@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blazebooru_models = { path = "../models" }
anyhow = "1.0.75"
blake3 = "1.5.0"
bytes = "1.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
futures-core = "0.3.29"
futures-util = "0.3.29"
tokio = "1.33.0"
tokio-util = "0.7.10"
tracing = "0.1.40"
