[package]
name = "blazebooru_common"
version = "0.1.0"
authors = ["Forb.Jok <forbjok@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blazebooru_models = { path = "../models" }
anyhow = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
futures-core = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
