[package]
name = "blazebooru_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blazebooru_common = { path = "../common" }
blazebooru_models = { path = "../models" }
blazebooru_store = { path = "../store" }
anyhow = "1.0.69"
argon2 = "0.4.1"
bytes = "1.4.0"
chrono = "0.4.23"
futures-core = "0.3.26"
futures-util = "0.3.26"
image = { version = "0.24.5", features = ["webp-encoder"] }
once_cell = "1.17.1"
regex = "1.7.1"
serde = "1.0.152"
serde_json = "1.0.93"
tokio = "1.25.0"
tracing = "0.1.37"
uuid = { version = "1.3.0", features = ["v4"] }
