[package]
name = "blazebooru_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blazebooru_common = { path = "../common" }
blazebooru_models = { path = "../models" }
blazebooru_store = { path = "../store" }
anyhow = "1.0.75"
argon2 = "0.5.2"
bytes = "1.5.0"
chrono = "0.4.31"
dirs = "5.0.1"
futures-core = "0.3.29"
futures-util = "0.3.29"
image = { version = "0.24.7", features = ["webp-encoder"] }
once_cell = "1.18.0"
regex = "1.10.2"
serde = "1.0.190"
serde_derive = "1.0.190"
serde_json = "1.0.108"
tokio = "1.33.0"
toml = "0.8.6"
tracing = "0.1.40"
uuid = { version = "1.5.0", features = ["v4"] }
