[package]
name = "blazebooru_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blazebooru_common = { path = "../common" }
blazebooru_models = { path = "../models" }
blazebooru_store = { path = "../store" }
anyhow = { workspace = true }
argon2 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
image = { workspace = true, features = ["webp-encoder"] }
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
