[package]
name = "blazebooru_import"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blazebooru_core = { path = "../core" }
blazebooru_models = { path = "../models" }
anyhow = "1.0.65"
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["macros", "signal"] }
