[package]
name = "blazebooru_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blazebooru_common = { path = "../common" }
blazebooru_models = { path = "../models" }
anyhow = "1.0.66"
chrono = "0.4.23"
serde = "1.0.147"
serde_derive = "1.0.147"
sqlx = { version = "0.6.2", features = ["chrono", "ipnetwork", "offline", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = "1.0.37"
tokio = "1.22.0"
tracing = "0.1.37"
uuid = "1.2.2"
