[package]
name = "blazebooru_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blazebooru_common = { path = "../common" }
blazebooru_models = { path = "../models" }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
sqlx = { workspace = true, features = ["chrono", "ipnetwork", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
